--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Testing inclusive bot action
 on:
   issues:
     types: [opened, edited]
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
     types: [opened, edited]
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -23,7 +23,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: Your inclusive bot
-      uses: melanierogan/inclusive_testv1.4
+      uses: melanierogan/inclusive_testv1.5
       with:
         github_token: ${{secrets.INCLUSIVE_BOT_TOKEN}}
         message: Some unfriendly or not inclusive words found
